[package]
name = "botticelli_narrative"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Narrative execution engine for Botticelli"

[dependencies]
botticelli_error = { workspace = true }
botticelli_core = { workspace = true }
botticelli_interface = { workspace = true }
botticelli_storage = { workspace = true }

# Optional database support
botticelli_database = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
derive_builder.workspace = true
derive-getters.workspace = true

[features]
default = []
database = ["dep:botticelli_database", "dep:diesel", "dep:chrono"]
api = []  # Marker feature for tests that make real API calls
gemini = []  # Marker feature for Gemini-specific tests

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
botticelli_models = { workspace = true, features = ["gemini"] }
dotenvy = { workspace = true }
