[package]
name = "botticelli_server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
botticelli_core = { path = "../botticelli_core" }
botticelli_error = { path = "../botticelli_error" }
botticelli_interface = { path = "../botticelli_interface" }

reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = [] }
hf-hub = { version = "0.3", features = ["tokio"] }

derive_more = { workspace = true }

[dev-dependencies]

[features]
default = []
api = []
