[package]
name = "botticelli_server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
botticelli_core = { path = "../botticelli_core" }
botticelli_error = { path = "../botticelli_error" }
botticelli_interface = { path = "../botticelli_interface" }

reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = "0.3"

[dev-dependencies]

[features]
default = []
api = []
