[package]
name = "botticelli_social"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Social media platform integrations for Botticelli LLM framework"

[dependencies]
# Internal workspace crates
botticelli_error = { workspace = true }
botticelli_interface = { workspace = true }
botticelli_database = { workspace = true, optional = true }
botticelli_narrative = { workspace = true, optional = true }
botticelli_cache = { workspace = true }
botticelli_security = { workspace = true }

# Database
diesel = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Derive macros
derive_more = { workspace = true }
derive-getters = "0.5"
derive_setters = "0.1"
derive_builder = "0.20"

# Discord integration (optional)
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }

[dev-dependencies]
dotenvy = "0.15"
tokio = { workspace = true, features = ["full"] }
botticelli_narrative = { workspace = true }
botticelli = { path = "../../crates/botticelli", features = ["discord", "database"] }

[features]
default = []
discord = ["serenity", "database"]
database = ["dep:botticelli_database", "dep:botticelli_narrative", "dep:diesel", "dep:chrono"]
