[package]
name = "botticelli_tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Terminal UI for reviewing and managing Botticelli-generated content"

[dependencies]
# Internal workspace crates
botticelli_error = { workspace = true, features = ["tui"] }
botticelli_database = { workspace = true, optional = true }
botticelli_narrative = { workspace = true }

# Database
diesel = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# TUI libraries
ratatui = { workspace = true }
crossterm = { workspace = true }

# System utilities
dirs = { workspace = true }

[features]
default = ["database"]
database = ["dep:botticelli_database", "dep:diesel", "botticelli_error/database"]
